--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "formidable": "^2.1.1",
+    "jimp": "^0.16.2",
     "mongoose": "^6.8.2",
     "nanoid": "^4.0.0",
     "nodemailer": "^6.8.0",
